# keksas-rl

./: pyproject.toml
data/: binance_BTCUSDT_1m_2023-05-01_2023-06-01.csv
domain/: dataset.py  env.py  main.py  portfolio.py
test/test_domain/: test_portfolio.py
