[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Valdas <vrapsevicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stable-baselines3 = {extras = ["extra"], version = "^2.1.0"}
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
